codegen/ui_tests/export_mod_cfg.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error: expected attribute arguments in parentheses: #[rhai_fn(...)]
  --> ui_tests/export_mod_cfg.rs:12:1
   |
12 | #[rhai_fn]
   | ^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_mod`
  --> ui_tests/export_mod_cfg.rs:23:8
   |
23 |     if test_mod::test_fn(n) {
   |        ^^^^^^^^ use of undeclared crate or module `test_mod`
